--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>中央大學總務處</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -19,7 +19,7 @@
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles_agency.css" rel="stylesheet" />
+        <link href="css/style_timeline_team.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
@@ -49,8 +49,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">了解更多</a>
                     </div>
                 </div>
             </div>
@@ -60,7 +59,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">緣起與目的</h2>
+                        <h2 class="text-white mt-0 font-weight-bold">緣起與目的</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之
                             <span style="color: orange;">2.68</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂
@@ -77,15 +76,15 @@
                 </div>
             </div>
         </section>
-        <!-- Event-->
+        <!-- Event -->
         <section class="page-section" id="event">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">大事紀</h2>
+                    <h2 class="section-heading font-weight-bold">大事紀</h2>
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
+                        <div class="timeline-image"></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>108.11.19</h4>
@@ -94,7 +93,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
+                        <div class="timeline-image"></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>109.01.06</h4>
@@ -103,7 +102,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="" /></div>
+                        <div class="timeline-image"></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>109.04.01</h4>
@@ -112,7 +111,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
+                        <div class="timeline-image"></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>109.08.13</h4>
@@ -120,25 +119,14 @@
                             <div class="timeline-body"><p class="text-muted">教育部同意八德校區籌設計畫</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of Our
-                                <br />
-                                Story!
-                            </h4>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </section>
-        <!-- Team-->
+        <!-- Team  -->
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">籌備委員會執行辦公室成員</h2>
+                    <h2 class="section-heading font-weight-bold">籌備委員會執行辦公室成員</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
@@ -162,8 +150,6 @@
                             <p class="text-muted">副執行長</p>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
