--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">緣起與目的</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event">大事紀</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#traffic">交通資訊</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">籌備委員會執行辦公室成員</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#news">活動與新聞</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
                         <h2 class="text-white mt-0">緣起與目的</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之
-                            <span style="color: orange;">2.68</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂
+                            <span style="color: orange;">2.56</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂
                            「八德智慧健康創新園區合作意向書」，並於109年8月13日
                             獲教育部同意籌設「國立中央大學八德校區」，預計發展以預
                             防及精準醫學為核心概念之「智慧健康創新園區」。本園區將
@@ -73,6 +73,38 @@
                             外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發
                             展，落實國立中央大學的社會責任。
                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Traffic -->
+        <section class="page-section" id="traffic">
+            <div class="container">
+                <h2 class="text-center mt-0">交通資訊</h2>
+                <hr class="divider my-4" />
+                <div class="media traffic-body">
+                    <img src="assets/img/traffic_edit.jpg"" class="mr-3" alt="traffic image">
+                    <div class="media-body">
+                      <h5 class="mt-0">八德校區位置說明：</h5>
+                      <ul>
+                            <li class="traffic-list">
+                                基地面積：<span style="color: red;">2.56</span>公頃
+                            </li>
+                            <li class="traffic-list">
+                                交通位置：
+                                <ul>
+                                    <li>
+                                        興豐路及建德路交叉口
+                                    </li>
+                                    <li>
+                                        桃園捷運系統綠線G01站對面
+                                    </li>
+                                    <li>
+                                        距離中大本部校區11公里，車程30分鐘
+                                    </li>
+                                </ul>
+                            </li>
+                      </ul>
                     </div>
                 </div>
             </div>
@@ -174,104 +206,31 @@
                 </div>
             </div>
         </section>
-        <!-- Services-->
-        <section class="page-section" id="services">
+        <!-- News -->
+        <section class="page-section" id="news">
             <div class="container">
-                <h2 class="text-center mt-0">At Your Service</h2>
+                <h2 class="text-center mt-0">活動與新聞</h2>
                 <hr class="divider my-4" />
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                <ul class="list-unstyled">
+                    <li class="media">
+                      <div class="media-body">
+                            <h5 class="mt-0 mb-1 news">109.01.07</h5>
+                            <div class="news-link">
+                                <a href="http://">八德智慧健康創新園區 中大與市府簽署合作意向書</a>
+                            </div>
+                      </div>
+                    </li>
+                    <li class="media">
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1 news">109.10</h5>
+                            <div class="news-link" >
+                                <a href="http://">拜會八德區議員說明分校籌設計畫</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-                        </div>
-                    </div>
-                </div>
+                      </li>
+                  </ul>
             </div>
         </section>
-        <!-- Portfolio-->
-        <div id="portfolio">
-            <div class="container-fluid p-0">
-                <div class="row no-gutters">
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
