meeting_one_before_1026

--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">緣起與目的</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event">大事紀</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#traffic">交通資訊</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event">大事紀</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">籌備委員會執行辦公室成員</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#news">活動與新聞</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -61,49 +60,47 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0 font-weight-bold">緣起與目的</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之
-                            <span style="color: orange;">2.56</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂
-                           「八德智慧健康創新園區合作意向書」，並於109年8月13日
-                            獲教育部同意籌設「國立中央大學八德校區」，預計發展以預
-                            防及精準醫學為核心概念之「智慧健康創新園區」。本園區將
-                            透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康
-                            創新園區」。本園區將透過智慧醫療及照護體系之能量，並結
-                            合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展
-                            外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發
-                            展，落實國立中央大學的社會責任。
+                        <p class=" mb-4" style="color: rgb(226, 225, 225); font-weight:530;">配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之
+                            <span style="color: orange;">2.56</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂「八德智慧健康創新園區合作意向書」，並於109年8月13日獲教育部同意籌設「國立中央大學八德校區」，預計發展以防及精準醫學為核心概念之「智慧健康創新園區」。本園區透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區將透過智慧醫療及照護體系之能量，並結合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發展，落實國立中央大學的社會責任。
                        </p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Traffic -->
-        <section class="page-section" id="traffic">
+        <section class="page-section bg-light" id="traffic">
             <div class="container">
-                <h2 class="text-center mt-0">交通資訊</h2>
+                <h2 class="text-center mt-0 font-weight-bold">交通資訊</h2>
                 <hr class="divider my-4" />
-                <div class="media traffic-body">
-                    <img src="assets/img/traffic_edit.jpg"" class="mr-3" alt="traffic image">
-                    <div class="media-body">
-                      <h5 class="mt-0">八德校區位置說明：</h5>
-                      <ul>
-                            <li class="traffic-list">
-                                基地面積：<span style="color: red;">2.56</span>公頃
-                            </li>
-                            <li class="traffic-list">
-                                交通位置：
-                                <ul>
-                                    <li>
-                                        興豐路及建德路交叉口
+                <div class="media traffic-body align-items-center">
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="assets/img/traffic.jpg" class="mr-3 traffic-body" alt="traffic image">
+                        </div>
+                        
+                        <div class="media-body col-4 traffic-text ">
+                            <br>
+                            <h5 class="mt-0 fit-content">八德校區位置說明：</h5>
+                            <ul class="fit-content">
+                                    <li class="traffic-list">
+                                        基地面積：<span style="color: red;">2.56</span>公頃
                                     </li>
-                                    <li>
-                                        桃園捷運系統綠線G01站對面
+                                    <li class="traffic-list">
+                                        交通位置：
+                                        <ul>
+                                            <li>
+                                                興豐路及建德路交叉口
+                                            </li>
+                                            <li>
+                                                桃園捷運系統綠線G01站對面
+                                            </li>
+                                            <li>
+                                                距離中大本部校區11公里，車程30分鐘
+                                            </li>
+                                        </ul>
                                     </li>
-                                    <li>
-                                        距離中大本部校區11公里，車程30分鐘
-                                    </li>
-                                </ul>
-                            </li>
-                      </ul>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -195,7 +192,7 @@
         <!-- News -->
         <section class="page-section" id="news">
             <div class="container">
-                <h2 class="text-center mt-0">活動與新聞</h2>
+                <h2 class="text-center mt-0 font-weight-bold">活動與新聞</h2>
                 <hr class="divider my-4" />
                 <ul class="list-unstyled">
                     <li class="media">
@@ -216,29 +213,7 @@
                       </li>
                   </ul>
             </div>
-        </section>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
-                        <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
-                    </div>
-                    <div class="col-lg-4 mr-auto text-center">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
-                    </div>
-                </div>
-            </div>
+            <br>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
