--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 </div>
             </div>
         </nav>
+
         <!-- Masthead-->
+
         <header class="masthead">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
@@ -53,28 +55,35 @@
                 </div>
             </div>
         </header>
-        <!-- About-->
+
+        <!-- About 緣起與目的 -->
+
         <section class="page-section bg-primary" id="about">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0 font-weight-bold">緣起與目的</h2>
                         <hr class="divider light my-4" />
-                        <p class=" mb-4" style="color: rgb(226, 225, 225); font-weight:530;">配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之
-                            <span style="color: orange;">2.56</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂「八德智慧健康創新園區合作意向書」，並於109年8月13日獲教育部同意籌設「國立中央大學八德校區」，預計發展以防及精準醫學為核心概念之「智慧健康創新園區」。本園區透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區將透過智慧醫療及照護體系之能量，並結合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發展，落實國立中央大學的社會責任。
+                        <p class=" mb-4" style="color: rgb(226, 225, 225); font-weight:530;">
+                            <!-- 緣起與目的內文 -->
+                            配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之<span style="color: orange;">2.56</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂「八德智慧健康創新園區合作意向書」，並於109年8月13日獲教育部同意籌設「國立中央大學八德校區」，預計發展以防及精準醫學為核心概念之「智慧健康創新園區」。本園區透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區將透過智慧醫療及照護體系之能量，並結合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發展，落實國立中央大學的社會責任。
                        </p>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Traffic -->
+
+        <!-- Traffic 交通資訊 -->
+
         <section class="page-section bg-light" id="traffic">
             <div class="container">
                 <h2 class="text-center mt-0 font-weight-bold">交通資訊</h2>
                 <hr class="divider my-4" />
+                <br>
                 <div class="media traffic-body align-items-center">
                     <div class="row">
                         <div class="col-6">
+                            <!-- 交通資訊照片assets/img/xxx.jpg -->
                             <img src="assets/img/traffic.jpg" class="mr-3 traffic-body" alt="traffic image">
                         </div>
                         
@@ -105,12 +114,16 @@
                 </div>
             </div>
         </section>
-        <!-- Event-->
+
+        <!-- Event 大事紀 -->
+
         <section class="page-section" id="event">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading font-weight-bold">大事紀</h2>
+                    <h2 class="text-center mt-0 font-weight-bold">大事紀</h2>
+                    <hr class="divider my-4" />
                 </div>
+                <br>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"></div>
@@ -139,24 +152,36 @@
                             <div class="timeline-body"><p class="text-muted">教育部同意授權辦理「八德校區智慧健康創新園區」興建營運移轉案(BOT)之後續評估作業</p></div>
                         </div>
                     </li>
+                    <!-- 新增大事紀複製起點 -->
                     <li class="timeline-inverted">
                         <div class="timeline-image"></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
+                                <!-- 發生日期 -->
                                 <h4>109.08.13</h4>
                             </div>
+                                                                            <!-- 事件內容 -->
                             <div class="timeline-body"><p class="text-muted">教育部同意八德校區籌設計畫</p></div>
                         </div>
                     </li>
+                    <!-- 新增大事紀複製終點 -->
+
+                    <!-- 新增大事紀貼在這 -->
+
+
                 </ul>
             </div>
         </section>
-        <!-- Team  -->
+
+        <!-- Team 籌備委員會執行辦公室成員 -->
+
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading font-weight-bold">籌備委員會執行辦公室成員</h2>
+                    <h2 class="text-center mt-0 font-weight-bold">籌備委員會執行辦公室成員</h2>
+                    <hr class="divider my-4" />
                 </div>
+                <br>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
@@ -179,22 +204,49 @@
                             <p class="text-muted">副執行長</p>
                         </div>
                     </div>
+                    <!-- 籌備委員會執行辦公室成員新增複製起點 -->
                     <div class="col-lg-4">
                         <div class="team-member">
+                                                                <!-- 照片位置 assets/img/team/xxx.jpg -->
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
+                            <!-- 姓名 -->
                             <h4>陳政達</h4>
+                            <!-- 職稱 -->
                             <p class="text-muted">副執行長</p>
                         </div>
                     </div>
+                    <!-- 籌備委員會執行辦公室成員新增複製終點 -->
+
+                    <!-- 籌備委員會執行辦公室成員貼在這 -->
+
+
                 </div>
             </div>
         </section>
-        <!-- News -->
+
+        <!-- News 活動與新聞 -->
+
         <section class="page-section" id="news">
             <div class="container">
                 <h2 class="text-center mt-0 font-weight-bold">活動與新聞</h2>
                 <hr class="divider my-4" />
+                <br>
                 <ul class="list-unstyled">
+                    <!-- 新增新聞貼在這 -->
+
+
+                    <!-- 新聞新增複製起點 -->
+                    <li class="media">
+                        <div class="media-body">
+                            <!-- 新聞日期 -->
+                            <h5 class="mt-0 mb-1 news">109.10</h5>
+                            <div class="news-link" >
+                                    <!-- 新聞連結        新聞標題 -->
+                                <a href="http://">拜會八德區議員說明分校籌設計畫</a>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- 新聞新增複製終點 -->
                     <li class="media">
                       <div class="media-body">
                             <h5 class="mt-0 mb-1 news">109.01.07</h5>
@@ -203,21 +255,13 @@
                             </div>
                       </div>
                     </li>
-                    <li class="media">
-                        <div class="media-body">
-                            <h5 class="mt-0 mb-1 news">109.10</h5>
-                            <div class="news-link" >
-                                <a href="http://">拜會八德區議員說明分校籌設計畫</a>
-                            </div>
-                        </div>
-                      </li>
-                  </ul>
+                </ul>
             </div>
             <br>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - 大數據暨程式設計研究社</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - 中央大學大數據暨程式設計研究社</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
