--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0 font-weight-bold">緣起與目的</h2>
                         <hr class="divider light my-4" />
-                        <p class=" mb-4" style="color: rgb(226, 225, 225); font-weight:530;">
+                        <p class=" mb-4" style="color: rgb(226, 225, 225); font-weight:530; text-align: left;">
                             <!-- 緣起與目的內文 -->
-                            配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之<span style="color: orange;">2.56</span>公頃文大用地，本校與桃園市政府於109年1月6日簽訂「八德智慧健康創新園區合作意向書」，並於109年8月13日獲教育部同意籌設「國立中央大學八德校區」，預計發展以防及精準醫學為核心概念之「智慧健康創新園區」。本園區透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區將透過智慧醫療及照護體系之能量，並結合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發展，落實國立中央大學的社會責任。
+                            配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之2.56公頃文大用地，本校與桃園市政府於109年1月6日簽訂「八德智慧健康創新園區合作意向書」，並於109年8月13日獲教育部同意籌設「國立中央大學八德校區」，預計發展以防及精準醫學為核心概念之「智慧健康創新園區」。本園區透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區將透過智慧醫療及照護體系之能量，並結合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發展，落實國立中央大學的社會責任。
                        </p>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                             <h5 class="mt-0 fit-content">八德校區位置說明：</h5>
                             <ul class="fit-content">
                                     <li class="traffic-list">
-                                        基地面積：<span style="color: red;">2.56</span>公頃
+                                        基地面積：2.56公頃
                                     </li>
                                     <li class="traffic-list">
                                         交通位置：
