news 合作意向書連結

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                       <div class="media-body">
                             <h5 class="mt-0 mb-1 news">109.01.07</h5>
                             <div class="news-link">
-                                <a href="http://">八德智慧健康創新園區 中大與市府簽署合作意向書</a>
+                                <a href="http://ncusec.ncu.edu.tw/news/headlines_content.php?H_ID=3600">八德智慧健康創新園區 中大與市府簽署合作意向書</a>
                             </div>
                       </div>
                     </li>
