--- a/index.html
+++ b/index.html
@@ -185,21 +185,21 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/吳瑞賢1.jpg" alt="" />
                             <h4>吳瑞賢</h4>
                             <p class="text-muted">執行長</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/徐沺1.jpg" alt="" />
                             <h4>徐沺</h4>
                             <p class="text-muted">副執行長</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/楊智斌1.jpg" alt="" />
                             <h4>楊智斌</h4>
                             <p class="text-muted">副執行長</p>
                         </div>
@@ -208,7 +208,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                                                                 <!-- 照片位置 assets/img/team/xxx.jpg -->
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/陳政達1.jpg" alt="" />
                             <!-- 姓名 -->
                             <h4>陳政達</h4>
                             <!-- 職稱 -->
