change nodal text

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container"><div class="small text-center text-muted">Copyright © 2020 - 中央大學大數據暨程式設計研究社</div></div>
+            <div class="container"><div class="small text-center text-muted">封面照片由 國立中央大學總務處採購組陳文龍 攝</div></div>
         </footer>
 
         <!-- Modal -->
@@ -289,12 +290,14 @@
                         </div>
                         <!-- 照片區 -->
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center conte">
                                 <!-- 照片 -->
                                 <img class="visited_img" src="assets/img/visited/1091116/1091106_ChiouRueiChao.JPG" alt="">
+                                <p>拜訪邱瑞朝區長</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center conte">
                                 <img class="visited_img" src="assets/img/visited/1091116/1091106_ChiouRueiChao_TsaiFongJhan.JPG" alt="">
+                                <p>拜訪邱瑞朝區長、蔡豊展副區長</p>
                             </div>     
                         </div>
                         <!-- 照片日期 -->
@@ -304,25 +307,29 @@
                         </div>
                         <!-- 照片 -->
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center content">
                                 <img class="visited_img" src="assets/img/visited/1091029/1091029_ChiouYiSheng.JPG" alt="">
+                                <p>拜訪邱奕勝議長</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center content">
                                 <img class="visited_img" src="assets/img/visited/1091029/1091029_LyuLinSiaoFong.JPG" alt="">
+                                <p>拜訪呂林小鳳議員</p>
                             </div>
                         </div>
                         <!-- 照片日期 -->
                         <br/>
                         <div class="row justify-content-center">
-                            <h5>109年10月22日</h5>
+                            <h5>109年10月22日 </h5>
                         </div>
                         <!-- 照片 -->
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center content">
                                 <img class="visited_img" src="assets/img/visited/1091022/1091022_JhaoJhengYu.JPG" alt="">
+                                <p>拜訪趙正宇立法委員</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center content">
                                 <img class="visited_img" src="assets/img/visited/1091022/1091022_LyuShuJhen.JPG" alt="">
+                                <p>拜訪呂淑真議員</p>
                             </div>
                         </div>
                         <!-- 照片日期 -->
@@ -332,11 +339,13 @@
                         </div>
                         <!-- 照片 -->
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center content">
                                 <img class="visited_img" src="assets/img/visited/1091005/1091005_DuanShuWun.JPG" alt="">
+                                <p>拜訪段樹文議員</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center content">
                                 <img class="visited_img" src="assets/img/visited/1091005/1091005_TsaiYongFang.JPG" alt="">
+                                <p>拜訪蔡永芳議員</p>
                             </div>
                         </div>
                     </div><!-- end container-fluid -->
