update 政達老師 photo link

--- a/index.html
+++ b/index.html
@@ -185,21 +185,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/team1.jpg" alt="" />
+                            <a href="http://www.cv.ncu.edu.tw/portfolio-item/%E5%90%B3%E7%91%9E%E8%B3%A2/" target="_blank">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/team1.jpg" alt="" />
+                            </a>
                             <h4>吳瑞賢</h4>
                             <p class="text-muted">執行長</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/team2.jpg" alt="" />
+                            <a href="http://dbse.ncu.edu.tw/index.php/ch/faculty/faculty_more/id/9.html" target="_blank">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/team2.jpg" alt="" />
+                            </a>
                             <h4>徐沺</h4>
                             <p class="text-muted">副執行長</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/team3.jpg" alt="" />
+                            <a href="http://www.cv.ncu.edu.tw/portfolio-item/%E6%A5%8A%E6%99%BA%E6%96%8C/" target="_blank">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/team3.jpg" alt="" />
+                            </a>
                             <h4>楊智斌</h4>
                             <p class="text-muted">副執行長</p>
                         </div>
@@ -207,8 +213,11 @@
                     <!-- 籌備委員會執行辦公室成員新增複製起點 -->
                     <div class="col-lg-4">
                         <div class="team-member">
+                            <!-- 照片連結的網址 -->
+                            <a href="http://www.pe.ncu.edu.tw/ncupe/web/main/about.php?type=Teacher" target="_blank">
                                                                 <!-- 照片位置 assets/img/team/xxx.jpg -->
-                            <img class="mx-auto rounded-circle" src="assets/img/team/team4.jpg" alt="" />
+                                <img class="mx-auto rounded-circle" src="assets/img/team/team4.jpg" alt="" />
+                            </a>
                             <!-- 姓名 -->
                             <h4>陳政達</h4>
                             <!-- 職稱 -->
@@ -242,12 +251,9 @@
                             <h5 class="mt-0 mb-1 news">109.10-11</h5>
                             <div class="news-link" >
                                     <!-- 新聞連結        新聞標題 -->
-                                <!-- <a href="/visited.html " target="_blank">拜訪八德區地方民代說明分校籌設計畫</a>
-                                 Button trigger modal 
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#vistiedModalLong">
-                                    Launch demo modal
-                                </button> -->
+                                <!-- <a href="/visited.html " target="_blank">拜訪八德區地方民代說明分校籌設計畫</a> -->
                                 <!-- lunch visited modal -->
+                                <!-- modal內容在footer下面 -->
                                 <a href="" data-toggle="modal" data-target="#vistiedModalLong">拜訪八德區地方民代說明分校籌設計畫</a>
                             </div>
                         </div>
@@ -257,6 +263,7 @@
                       <div class="media-body">
                             <h5 class="mt-0 mb-1 news">109.01.07</h5>
                             <div class="news-link">
+                                <!-- 新聞連結        新聞標題 -->
                                 <a href="http://ncusec.ncu.edu.tw/news/headlines_content.php?H_ID=3600" target="_blank">八德智慧健康創新園區 中大與市府簽署合作意向書</a>
                             </div>
                       </div>
