--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event">大事紀</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">籌備委員會執行辦公室成員</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#news">活動與新聞</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">聯絡我們</a></li>
                     </ul>
                 </div>
             </div>
@@ -66,7 +67,7 @@
                         <hr class="divider light my-4" />
                         <p class=" mb-4" style="color: rgb(226, 225, 225); font-weight:530; text-align: left;">
                             <!-- 緣起與目的內文 -->
-                            配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之2.56公頃文大用地，本校與桃園市政府於109年1月6日簽訂「八德智慧健康創新園區合作意向書」，並於109年8月13日獲教育部同意籌設「國立中央大學八德校區」，預計發展以防及精準醫學為核心概念之「智慧健康創新園區」。本園區透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區將透過智慧醫療及照護體系之能量，並結合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發展，落實國立中央大學的社會責任。
+                            配合桃園市《擴大及變更八德(八德地區)都市計畫案》劃設之2.56公頃文大用地，本校與桃園市政府於109年1月6日簽訂「八德智慧健康創新園區合作意向書」，並於109年8月13日獲教育部同意籌設「國立中央大學八德校區」，預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區透過智慧預計發展以預防及精準醫學為核心概念之「智慧健康創新園區」。本園區將透過智慧醫療及照護體系之能量，並結合創新創業學苑之實踐，除滿足地方醫療需求並協助地方發展外，亦將體現桃園市智慧城市的實現與國家智慧健康產業之發展，落實國立中央大學的社會責任。
                        </p>
                     </div>
                 </div>
@@ -234,7 +235,6 @@
         </section>
 
         <!-- News 活動與新聞 -->
-
         <section class="page-section" id="news">
             <div class="container">
                 <h2 class="text-center mt-0 font-weight-bold">活動與新聞</h2>
@@ -251,10 +251,10 @@
                             <h5 class="mt-0 mb-1 news">109.10-11</h5>
                             <div class="news-link" >
                                     <!-- 新聞連結        新聞標題 -->
-                                <!-- <a href="/visited.html " target="_blank">拜訪八德區地方民代說明分校籌設計畫</a> -->
+                                <!-- <a href="/visited.html " target="_blank">拜訪八德區地方民代說明校區籌設計畫</a> -->
                                 <!-- lunch visited modal -->
                                 <!-- modal內容在footer下面 -->
-                                <a href="" data-toggle="modal" data-target="#vistiedModalLong">拜訪八德區地方民代說明分校籌設計畫</a>
+                                <a href="" data-toggle="modal" data-target="#vistiedModalLong">拜訪八德區地方民代說明校區籌設計畫</a>
                             </div>
                         </div>
                     </li>
@@ -273,10 +273,35 @@
             <br>
         </section>
         
+        <!-- Contact 聯絡我們 -->
+        <section class="page-section bg-light" id="contact">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="mt-0">聯絡我們</h2>
+                        <hr class="divider my-4" />
+                        <br>
+                        <p class="text-muted mb-4">如有任何問題，歡迎來信詢問中央大學總務處</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="text-center text-muted">
+                        <!-- 信箱 -->
+                        <a class="d-block" href="mailto:ncu7300@ncu.edu.tw">
+                            <div class="text-center">
+                                <i class="fas fa-envelope fa-4x mb-4"></i>
+                            </div>
+                        </a>
+                        <p>ncu7300@ncu.edu.tw</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - 中央大學大數據暨程式設計研究社</div></div>
-            <div class="container"><div class="small text-center text-muted">封面照片由 國立中央大學總務處採購組陳文龍 攝</div></div>
+        <footer class="bg-secondary py-5">
+            <div class="container"><div class="small text-center text-white">Copyright © 2020 - 中央大學大數據暨程式設計研究社</div></div>
+            <div class="container"><div class="small text-center text-white">封面照片由 國立中央大學總務處採購組陳文龍 攝</div></div>
         </footer>
 
         <!-- Modal -->
@@ -296,13 +321,8 @@
                             <h5>109年11月16日</h5>
                         </div>
                         <!-- 照片區 -->
-                        <div class="row">
-                            <div class="col-md-6 text-center conte">
-                                <!-- 照片 -->
-                                <img class="visited_img" src="assets/img/visited/1091116/1091106_ChiouRueiChao.JPG" alt="">
-                                <p>拜訪邱瑞朝區長</p>
-                            </div>
-                            <div class="col-md-6 text-center conte">
+                        <div class="row justify-content-center">
+                            <div class="col-md-6 text-center content">
                                 <img class="visited_img" src="assets/img/visited/1091116/1091106_ChiouRueiChao_TsaiFongJhan.JPG" alt="">
                                 <p>拜訪邱瑞朝區長、蔡豊展副區長</p>
                             </div>     
