--- a/index.html
+++ b/index.html
@@ -153,8 +153,17 @@
                             <div class="timeline-body"><p class="text-muted">教育部同意授權辦理「八德校區智慧健康創新園區」興建營運移轉案(BOT)之後續評估作業</p></div>
                         </div>
                     </li>
-                    <!-- 新增大事紀複製起點 -->
                     <li class="timeline-inverted">
+                        <div class="timeline-image"></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>109.07.24</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">委託廠商進行可行性評估</p></div>
+                        </div>
+                    </li>
+                    <!-- 新增大事紀複製起點 -->
+                    <li class="timeline">
                         <div class="timeline-image"></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
