update traffic current photo + change font size from 1rem to 1.2 rem

--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
                     校區鄰近市定古蹟「<a href="https://reurl.cc/9XYpKV" target="_blank">呂宅著存堂</a>」，環境優美。
                 </p>
             </div>
+            <div class="media traffic-body align-items-center mb-4">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6 col-xs-12">
+                        <img class="traffic_img" src="assets/img/traffic/P1250492.JPG">
+                    </div>
+                    <div class="col-lg-6 col-xs-12">
+                        <img class="traffic_img" src="assets/img/traffic/P1250501.JPG">
+                    </div>
+                    <div class="col-lg-6 col-xs-12">
+                        <img class="traffic_img" src="assets/img/traffic/P1250510.JPG">
+                    </div>
+                    <div class="col-lg-6 col-xs-12">
+                        <img class="traffic_img" src="assets/img/traffic/P1250587.JPG">
+                    </div>
+                </div>
+            </div>
             <h5 class="text-center">八德校區位置</h5>
             <div class="row justify-content-center">
                 <p class="col-lg-8 mb-4">
@@ -117,10 +133,10 @@
             <div class="media traffic-body align-items-center">
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-xs-12">
-                        <img class="traffic_img" src="assets/img/map_1.jpg">
+                        <img class="traffic_img" src="assets/img/traffic/map_1.jpg">
                     </div>
                     <div class="col-lg-6 col-xs-12">
-                        <img class="traffic_img" src="assets/img/map_2.jpg">
+                        <img class="traffic_img" src="assets/img/traffic/map_2.jpg">
                     </div>
                 </div>
 
@@ -343,7 +359,7 @@
                     <h2 class="mt-0">聯絡我們</h2>
                     <hr class="divider my-4" />
                     <br>
-                    <p class="text-muted mb-4">如有任何問題，歡迎來信詢問</p>
+                    <p class="text-muted mb-4">如有任何問題，歡迎來信洽詢</p>
                 </div>
             </div>
             <div class="row justify-content-center">
