--- a/index.html
+++ b/index.html
@@ -112,16 +112,28 @@
                 <div id="scene_img_carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="assets/img/traffic/P1250492.JPG" alt="1st slide">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250492.JPG" alt="1st slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/img/traffic/P1250501.JPG" alt="2nd slide">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250501.JPG" alt="2nd slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/img/traffic/P1250510.JPG" alt="3rd slide">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250510.JPG" alt="3rd slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/img/traffic/P1250587.JPG" alt="4th slide">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250587.JPG" alt="4th slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250508.JPG" alt="5th slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250616.JPG" alt="6th slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250677.JPG" alt="7th slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/traffic/scene/P1250750.JPG" alt="8th slide">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#scene_img_carousel" role="button" data-slide="prev">
