--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h5 class="mb-4" style="color: rgb(226, 225, 225);">開發緣起</h5>
                     <p class="mb-4 text-left" style="color: rgb(226, 225, 225);">
                         <!-- 緣起內文 -->
-                        國立中央大學佔地達62公頃，地處中壢雙連坡，為桃園地區唯一的國立大學，係全台最早提出以「永續發展(Sustainable Development)」做為教學和發展總目標的學校。
+                        國立中央大學佔地達62公頃，地處中壢雙連坡，為桃園地區唯一的綜合型國立大學，係全台最早提出以「永續發展(Sustainable Development)」做為教學和發展總目標的學校。
                         配合桃園市「擴大及變更八德(八德地區)都市計畫案」劃設之2.6公頃文大用地，本校將八德校區開發列為中長期重要校務發展規劃，期藉由八德校區之開發，整合產官學等教研資源推動科技研發與知識創新，塑造當地成為優質文教區，並協助桃園市政府發展「智慧城市」，促進本校特色發展、提升八德地區經濟發展與開發效益、驅動桃園市智慧城市的實現與國家智慧健康產業發展。
                     </p>
                     <h5 class="mb-4" style="color: rgb(226, 225, 225);">開發目的</h5>
