1203 update緣起 + update traffic img + update event

--- a/index.html
+++ b/index.html
@@ -152,15 +152,6 @@
                     <div class="col-lg-6 col-xs-12">
                         <img class="traffic_img" src="assets/img/traffic/P1250492.JPG">
                     </div>
-                    <div class="col-lg-6 col-xs-12">
-                        <img class="traffic_img" src="assets/img/traffic/P1250501.JPG">
-                    </div>
-                    <div class="col-lg-6 col-xs-12">
-                        <img class="traffic_img" src="assets/img/traffic/P1250510.JPG">
-                    </div>
-                    <div class="col-lg-6 col-xs-12">
-                        <img class="traffic_img" src="assets/img/traffic/P1250587.JPG">
-                    </div>
                 </div>
             </div> -->
             <h5 class="text-center">八德校區位置</h5>
@@ -233,7 +224,7 @@
                             <h4>109.07.24</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted">委託廠商進行可行性評估</p>
+                            <p class="text-muted">委託廠商進行「八德校區智慧健康創新園區」BOT可行性評估</p>
                         </div>
                     </div>
                 </li>
